--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" /> <!-- Otherwise, the navbar doesn't collapse on mobile -->
     <title>Profile</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" media="screen">
     <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen">
@@ -50,17 +51,6 @@
   
       <div id="portfolio">
         <h2>Portfolio</h2>
-        <!-- <div class="media"> 
-          <div class="media-left">
-        <a href="https://portfolio.mcmyler.com" target="_blank">
-          <img class="media-object" src="https://c4.staticflickr.com/9/8410/28510038331_44446a3b22_q.jpg" alt="Screenshot of personal portfolio page.">
-        </a>
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Personal Portfolio</h4>
-            <p>A <a href="https://portfolio.mcmyler.com" target="_blank">portfolio</a> of my work.</p>
-          </div>
-        </div> -->
         <div class="media"> <!-- Random Quote Machine -->
           <div class="media-left">
             <a href="http://codepen.io/sa-mm/full/WxJkZA/" target="_blank">
@@ -75,7 +65,7 @@
         <div class="media"> <!-- Local Weather -->
           <div class="media-left">
             <a href="https://weather.mcmyler.com" target="_blank">
-              <img class="media-object" src="https://c5.staticflickr.com/9/8056/28481582652_eaf4abe185_q.jpg" alt="Screenshot of random quote page.">
+              <img class="media-object" src="images/weather.png" alt="Screenshot of random quote page.">
             </a>
           </div>
           <div class="media-body">
@@ -95,24 +85,11 @@
             <p>A <a href="https://calc.mcmyler.com" target="_blank">calculator</a>.</p>
            </div>
         </div>
-        <div class="media"><!-- Tribute Page -->
-          <div class="media-left">
-            <a href="http://codepen.io/sa-mm/full/rLJOza/" target="_blank">
-              <img class="media-object" src="https://c5.staticflickr.com/9/8666/28312415292_7fca105024_q.jpg" alt="Screenshot of Tagore tribute page.">
-            </a>
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Tagore Tribute Page</h4>
-            <p>A <a href="http://codepen.io/sa-mm/full/rLJOza/" target="_blank">tribute page</a> to Rabindranath Tagore. Created for one of freeCodeCamp's "Development Projects."</p>
-          </div>
-        </div>
       </div>
     
       <div id="contact">
         <h2>Contact</h2>
         <p>I'm <em>sa-mm</em> on <a href="http://codepen.io/sa-mm/" target="_blank">CodePen</a>, <a href="https://www.freecodecamp.com/sa-mm" target="_blank">freeCodeCamp</a>, and <a href="https://github.com/sa-mm" target="_blank">GitHub <i class="fa fa-github"></i></a>. You can also contact me <a href="https://twitter.com/s_pugly" target="_blank">@s_pugly <i class="fa fa-twitter"></i></a> on Twitter.</p>
-
-
       <!-- Email, LinkedIn, etc?     -->
       </div>
     </div>
