Update url for random quote machine

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <h2>Portfolio</h2>
         <div class="media"> <!-- Random Quote Machine -->
           <div class="media-left">
-            <a href="http://codepen.io/sa-mm/full/WxJkZA/" target="_blank">
+            <a href="https://quote.mcmyler.com" target="_blank">
               <img class="media-object" src="https://c5.staticflickr.com/9/8056/28481582652_eaf4abe185_q.jpg" alt="Screenshot of random quote page.">
             </a>
           </div>
           <div class="media-body">
             <h4 class="media-heading">Random Quote Machine</h4>
-            <p>A website that generates a <a href="http://codepen.io/sa-mm/full/WxJkZA/" target="_blank">random quote</a> and then lets you tweet it. Makes use of JQuery's <code>.getJSON</code> method to get the quote from <a href="https://forismatic.com/en/" target="_blank">Forismatic.com</a>.</p>
+            <p>A website that generates a <a href="https://quote.mcmyler.com" target="_blank">random quote</a> and then lets you tweet it. Makes use of JQuery's <code>.getJSON</code> method to get the quote from <a href="https://forismatic.com/en/" target="_blank">Forismatic.com</a>.</p>
            </div>
         </div>
         <div class="media"> <!-- Local Weather -->
