--- a/index.html
+++ b/index.html
@@ -9,88 +9,92 @@
   
   </head>
   <body>
-    <nav class="navbar navbar-default navbar-fixed-top"> <!--class="navbar navbar-default navbar-fixed-top" -->
-      <div class="container">
-        <!--Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed"  data-toggle="collapse" data-target="#dev-freddie-navbar-collapse" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">profile.mcmyler.com</a>
-        </div>
+    <div class="container-fluid">
+      <nav class="navbar navbar-default navbar-fixed-top"> <!--class="navbar navbar-default navbar-fixed-top" -->
+        <!-- <div class="container-fluid"> -->
+          <div class="col-sm-8 col-sm-offset-2">
+          <!--Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed"  data-toggle="collapse" data-target="#profile-navbar-collapse" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">profile.mcmyler.com</a>
+            </div>
 
-        <!--Collect the nav links for toggling-->
-        <div class="collapse navbar-collapse" id="dev-freddie-navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#about">About</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div> <!-- /.navbar-collapse -->
-      </div> <!--.container -->
-    </nav>
+            <!--Collect the nav links for toggling-->
+            <div class="collapse navbar-collapse" id="profile-navbar-collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+             </div> <!-- /.navbar-collapse -->
+          </div>
 
-  
-    <div class="container">
+      </nav>
+    
+      <div class="col-sm-8 col-sm-10 col-sm-offset-2 ">
 
-        <div id="about">
+        <div id="about" class="row">
           <h2>About</h2>
           <p>My name is Sam. I develop things.</p>
-          <p>Skills:</p>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Bootstrap</li>
-            <li>JavaScript</li>
-            <li>Ruby</li>
-          </ul>
-        </div>
-  
-      <div id="portfolio">
-        <h2>Portfolio</h2>
-        <div class="media"> <!-- Random Quote Machine -->
-          <div class="media-left">
-            <a href="https://quote.mcmyler.com" target="_blank">
-              <img class="media-object" src="https://c5.staticflickr.com/9/8056/28481582652_eaf4abe185_q.jpg" alt="Screenshot of random quote page.">
-            </a>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="table-responsive">
+              <table class="table">
+                <thead>Skills</thead>
+                <tr><td>HTML</td><td>JavaScript</td></tr>
+                <tr><td>CSS</td><td>Ruby</td></tr>
+                <tr><td>Bootstrap</td><td></td></tr>
+              </table>
+            </div>
           </div>
-          <div class="media-body">
-            <h4 class="media-heading">Random Quote Machine</h4>
-            <p>A website that generates a <a href="https://quote.mcmyler.com" target="_blank">random quote</a> and then lets you tweet it. Makes use of JQuery's <code>.getJSON</code> method to get the quote from <a href="https://forismatic.com/en/" target="_blank">Forismatic.com</a>.</p>
-           </div>
         </div>
-        <div class="media"> <!-- Local Weather -->
-          <div class="media-left">
-            <a href="https://weather.mcmyler.com" target="_blank">
-              <img class="media-object" src="images/weather.png" alt="Screenshot of random quote page.">
-            </a>
+
+        <div id="portfolio" class="row">
+          <h2>Portfolio</h2>
+          <div class="media"> <!-- Random Quote Machine -->
+            <div class="media-left">
+              <a href="https://quote.mcmyler.com" target="_blank">
+                <img class="media-object" src="https://c5.staticflickr.com/9/8056/28481582652_eaf4abe185_q.jpg" alt="Screenshot of random quote page.">
+              </a>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">Random Quote Machine</h4>
+              <p>A website that generates a <a href="https://quote.mcmyler.com" target="_blank">random quote</a> and then lets you tweet it. Makes use of JQuery's <code>.getJSON</code> method to get the quote from <a href="https://forismatic.com/en/" target="_blank">Forismatic.com</a>.</p>
+             </div>
           </div>
-          <div class="media-body">
-            <h4 class="media-heading">Local Weather App</h4>
-            <p>A <a href="https://weather.mcmyler.com" target="_blank">website</a> that tells you the local weather.</p>
-           </div>
-        </div>
-        <div class="media"> <!-- Calculator -->
-          <div class="media-left">
-            <a href="https://calc.mcmyler.com" target="_blank">
-              <!-- <img class="media-object" src="https://c5.staticflickr.com/9/8056/28481582652_eaf4abe185_q.jpg" alt="Screenshot of random quote page."> -->
-                            <img class="media-object" src="images/calc.png" alt="Screenshot of random quote page.">
-            </a>
+          <div class="media"> <!-- Local Weather -->
+            <div class="media-left">
+              <a href="https://weather.mcmyler.com" target="_blank">
+                <img class="media-object" src="images/weather.png" alt="Screenshot of random quote page.">
+              </a>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">Local Weather App</h4>
+              <p>A <a href="https://weather.mcmyler.com" target="_blank">website</a> that tells you the local weather.</p>
+             </div>
           </div>
-          <div class="media-body">
-            <h4 class="media-heading">Calculator</h4>
-            <p>A <a href="https://calc.mcmyler.com" target="_blank">calculator</a>.</p>
-           </div>
+          <div class="media"> <!-- Calculator -->
+            <div class="media-left">
+              <a href="https://calc.mcmyler.com" target="_blank"> 
+                <img class="media-object" src="images/calc.png" alt="Screenshot of random quote page.">
+              </a>
+            </div>
+            <div class="media-body">
+              <h4 class="media-heading">Calculator</h4>
+              <p>A <a href="https://calc.mcmyler.com" target="_blank">calculator</a>.</p>
+             </div>
+          </div>
         </div>
-      </div>
-    
-      <div id="contact">
-        <h2>Contact</h2>
-        <p>I'm <em>sa-mm</em> on <a href="http://codepen.io/sa-mm/" target="_blank">CodePen</a>, <a href="https://www.freecodecamp.com/sa-mm" target="_blank">freeCodeCamp</a>, and <a href="https://github.com/sa-mm" target="_blank">GitHub <i class="fa fa-github"></i></a>. You can also contact me <a href="https://twitter.com/s_pugly" target="_blank">@s_pugly <i class="fa fa-twitter"></i></a> on Twitter.</p>
-      <!-- Email, LinkedIn, etc?     -->
+
+        <div id="contact" class="row">
+          <h2>Contact</h2>
+          <p>I'm <em>sa-mm</em> on <a href="http://codepen.io/sa-mm/" target="_blank">CodePen</a>, <a href="https://www.freecodecamp.com/sa-mm" target="_blank">freeCodeCamp</a>, and <a href="https://github.com/sa-mm" target="_blank">GitHub <i class="fa fa-github"></i></a>. You can also contact me <a href="https://twitter.com/s_pugly" target="_blank">@s_pugly <i class="fa fa-twitter"></i></a> on Twitter.</p>
+        <!-- Email, LinkedIn, etc?     -->
+        </div>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript" charset="utf-8"></script>
