Remove scrollspy and <table>

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!--Collect the nav links for toggling-->
             <div class="collapse navbar-collapse" id="profile-navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#about">About</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
@@ -41,16 +41,22 @@
         <div id="about" class="row">
           <h2>About</h2>
           <p>My name is Sam. I develop things.</p>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="table-responsive">
-              <table class="table">
-                <thead>Skills</thead>
-                <tr><td>HTML</td><td>JavaScript</td></tr>
-                <tr><td>CSS</td><td>Ruby</td></tr>
-                <tr><td>Bootstrap</td><td></td></tr>
-              </table>
+          <!-- <div class="col-md-4 col-sm-6 col-xs-12"> -->
+            <p>Skills:</p>
+            <div class="col-xs-6">
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+            </ul>
             </div>
-          </div>
+            <div class="col-xs-6">
+            <ul>
+              <li>Javascript</li>
+              <li>Ruby</li>
+            </ul>
+            </div>
+          <!-- </div> -->
         </div>
 
         <div id="portfolio" class="row">
